<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pollicino</string>
    <string name="hello">Pollicino</string>
    <string name="menu_settings">Settings</string>
    <string name="button_start_label">Start</string>
    <string name="button_stop_label">Stop</string>
    <string name="button_impostazioni_label">Impostazioni</string>
    <string name="button_mappa_label">Mappa</string>
    <string name="button_stats_label">Statistiche</string>
    <string name="button_clean_label">Reset punti</string>
    <string name="set_frequenza_label">Settare la frequenza di aggiornamento del mapping</string>
    <string name="title_activity_impostazioni">Impostazioni</string>
    <string name="tp_label">Valore settato: 5 minuti</string>
    <string name="button_progress_label">OK</string>
    <string name="button_void_label">Cancel</string>
    <string name="stats_punti_label">Numero punti:</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_mappa">Mappa</string>
    <string name="title_activity_stats">Stats</string>

</resources>